# CRM-Service-Center

./: docker-compose.yml
backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/admin/: dependencies.py  router.py  service.py
backend/app/admin/templates/: base.html  dashboard.html  user_detail.html  user_edit.html  users.html
backend/app/auth/: dependencies.py  roles.py  router.py  schemas.py  service.py
backend/app/core/: config.py  email.py  email_templates.py  redis.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: b2455dbf4556_create_users_table.py  ce18592804c4_update_users_table.py
backend/app/models/: user.py
backend/crm_service_center.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
